Merge runtime-with-instruments project into runtime/Test